--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.3"
+    "@umijs/plugins": "^4.4.11",
+    "typescript": "^5.0.3",
+    "tailwindcss": "^3"
   }
 }
