--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "^4.4.11"
+    "date-fns": "^4.1.0",
+    "umi": "^4.4.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@umijs/plugins": "^4.4.11",
-    "typescript": "^5.0.3",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^5.0.3"
   }
 }
