--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/feature/*": ["src/features/*"]
+      "@/features/*": ["src/features/*"]
     }
   }
 }
